# omny

./: README.md  main.py  pyproject.toml
src/omny/: __main__.py  omny.py
